...
    <string name="label_toc">Saya telah membaca dan menyetujui syarat dan ketentuan yang berlaku</string>
    <string name="label_have_account_to_login">Already have account ? Login here</string>
    <string name="label_need_to_register">Don\'t have an account ? Register here</string>
    <string name="label_buat_edumail">Buat Edumail</string>
    <string name="label_email_suggestion">Saran email lain</string>
    <string name="label_ask_for_other_email">Minta saran lain</string>
    <string name="activity_title_confirmation">Confirmation</string>
    <string name="hint_write_your_message">Tulis pesan anda disini . . .</string>
    <string name="label_what_you_need">Apa yang anda Butuhkan?</string>
    <string name="btn_send">Kirim</string>
    <string name="sample_version">version 1.0.0</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
...
    <string name="dialog_title_confirmation">Konfirmasi</string>
    <string name="activity_title_reply">Reply</string>
    <string name="activity_title_reply_all">Reply All</string>
    <string name="activity_title_forward">Forward</string>
    <string name="activity_title_searchmail">Search Mail</string>
    <string name="hint_subject">Subject</string>
    <string name="message_contact_us_message_sent">Thank you, Your message has been sent</string>
</resources>

