<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.telkom.weedu.view.contactus.ContactUsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Medium.Bold"
            android:text="@string/label_what_you_need"
            android:textColor="@color/colorBlack" />

        <Spinner
            android:id="@+id/spn_product"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <View style="@style/horizontalDividerGray" />

        <EditText
            android:id="@+id/edt_subject"
            style="@style/Base.TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rounded_border_grey"
            android:gravity="start"
            android:hint="@string/hint_subject"
            android:padding="8dp" />

        <EditText
            android:id="@+id/edt_message"
            style="@style/Base.TextAppearance.AppCompat.Caption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rounded_border_grey"
            android:gravity="start"
            android:hint="@string/hint_write_your_message"
            android:lines="8"
            android:padding="8dp" />

        <Button
            android:id="@+id/btn_send_message"
            style="@style/ButtonColorPrimaryRounded"
            android:layout_marginTop="16dp"
            android:elevation="3dp"
            android:text="@string/btn_send" />

    </LinearLayout>

    <include layout="@layout/toolbar" />

</LinearLayout>
