<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.telkom.weedu.view.login.LoginActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/ln_main_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="64dp"
                android:layout_marginTop="24dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="4dp"
                    android:gravity="center"
                    android:text="@string/app_title_uppercase"
                    android:textColor="@android:color/white"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_tagline"
                    android:textColor="@android:color/white" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="22dp"
                android:gravity="center"
                android:text="@string/label_login"
                android:textColor="@android:color/white"
                android:textSize="22sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/rounded_background_white_line_transparent"
                android:drawableLeft="@drawable/ic_form_person"
                android:drawablePadding="@dimen/activity_vertical_margin"
                android:hint="@string/hint_username"
                android:paddingBottom="12dp"
                android:paddingLeft="24dp"
                android:paddingRight="24dp"
                android:paddingTop="12dp"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="13sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="@drawable/rounded_background_white_line_transparent"
                    android:drawableLeft="@drawable/ic_form_password"
                    android:drawablePadding="@dimen/activity_vertical_margin"
                    android:drawableStart="@drawable/ic_form_password"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingBottom="12dp"
                    android:paddingLeft="24dp"
                    android:paddingRight="24dp"
                    android:paddingTop="12dp"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite"
                    android:textSize="13sp" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/btn_rounded_background_white"
                android:text="@string/label_login" />

            <ProgressBar
                android:id="@+id/pb_indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:text="@string/label_or_connect_with"
                android:textColor="@android:color/white"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_login_facebook"
                    android:layout_width="88dp"
                    android:layout_height="58dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_facebook" />

                <Button
                    android:id="@+id/btn_login_twitter"
                    android:layout_width="88dp"
                    android:layout_height="58dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_twitter" />

                <Button
                    android:id="@+id/btn_login_google"
                    android:layout_width="88dp"
                    android:layout_height="58dp"
                    android:layout_marginLeft="-4dp"
                    android:layout_marginRight="-4dp"
                    android:background="@drawable/btn_google_plus" />

                <Button
                    android:id="@+id/btn_login_edumail"
                    android:layout_width="88dp"
                    android:layout_height="58dp"
                    android:layout_marginLeft="-4dp"
                    android:background="@drawable/btn_edumail" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ln_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/label_need_to_register"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>
</RelativeLayout>


