...
                android:orientation="vertical"
                android:paddingLeft="16dp">

                <TextView
                    style="@style/Base.TextAppearance.AppCompat.Medium.Bold"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:text="@string/label_recommendations"
                    android:textColor="@color/textBlack" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rv_recommendations"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
...
